--- a/src/index.html
+++ b/src/index.html
@@ -20,8 +20,313 @@
       href="styles/index.scss"
     />
   </head>
+  <header class="header">
+    <a
+      href="#home"
+      class="logo"
+    >
+      <img
+        src="./images/logo.png"
+        alt="logo"
+        class="logo__img"
+      />
+    </a>
+    <nav class="nav">
+      <ul class="nav__list">
+        <li class="nav__item">
+          <a
+            class="nav__link is-active"
+            href="#"
+          >
+            Apple
+          </a>
+        </li>
+        <li class="nav__item">
+          <a
+            href="#"
+            class="nav__link"
+          >
+            Samsung
+          </a>
+        </li>
+        <li class="nav__item">
+          <a
+            href="#"
+            class="nav__link"
+          >
+            Smartphones
+          </a>
+        </li>
+        <li class="nav__item">
+          <a
+            href="#"
+            class="nav__link"
+            data-qa="nav-hover"
+          >
+            Laptops & Computers
+          </a>
+        </li>
+        <li class="nav__item">
+          <a
+            href="#"
+            class="nav__link"
+          >
+            Gadgets
+          </a>
+        </li>
+        <li class="nav__item">
+          <a
+            href="#"
+            class="nav__link"
+          >
+            Tablets
+          </a>
+        </li>
+        <li class="nav__item">
+          <a
+            href="#"
+            class="nav__link"
+          >
+            Photo
+          </a>
+        </li>
+        <li class="nav__item">
+          <a
+            href="#"
+            class="nav__link"
+          >
+            Video
+          </a>
+        </li>
+      </ul>
+    </nav>
+  </header>
+  <main class="catalog">
+    <div
+      class="card"
+      data-qa="card"
+    >
+      <img
+        src="./images/imac.jpeg"
+        alt="imac"
+        class="card__img"
+      />
+      <p class="card__title">
+        APPLE A1419 iMac 27" Retina 5K Monoblock (MNED2UA/A)
+      </p>
+      <p class="card__code">Product code: 195434</p>
+      <div class="card__review">
+        <div class="card__stars card__stars--4">
+          <div class="card__star"></div>
+          <div class="card__star"></div>
+          <div class="card__star"></div>
+          <div class="card__star"></div>
+          <div class="card__star"></div>
+        </div>
+        <p class="card__review-text">Reviews: 5</p>
+      </div>
 
-  <body>
-    <h1>Catalog</h1>
-  </body>
+      <div class="card__price">
+        <p class="card__price_label">Price:</p>
+        <p class="card__price_amount">$2,199</p>
+      </div>
+      <button
+        class="card__button"
+        data-qa="card-hover"
+      >
+        BUY
+      </button>
+    </div>
+    <div class="card">
+      <img
+        src="./images/imac.jpeg"
+        alt="imac"
+        class="card__img"
+      />
+      <p class="card__title">
+        APPLE A1419 iMac 27" Retina 5K Monoblock (MNED2UA/A)
+      </p>
+      <p class="card__code">Product code: 195434</p>
+      <div class="card__review">
+        <div class="card__stars card__stars--4">
+          <div class="card__star"></div>
+          <div class="card__star"></div>
+          <div class="card__star"></div>
+          <div class="card__star"></div>
+          <div class="card__star"></div>
+        </div>
+        <p class="card__review-text">Reviews: 5</p>
+      </div>
+
+      <div class="card__price">
+        <p class="card__price_label">Price:</p>
+        <p class="card__price_amount">$2,199</p>
+      </div>
+      <button class="card__button">BUY</button>
+    </div>
+    <div class="card">
+      <img
+        src="./images/imac.jpeg"
+        alt="imac"
+        class="card__img"
+      />
+      <p class="card__title">
+        APPLE A1419 iMac 27" Retina 5K Monoblock (MNED2UA/A)
+      </p>
+      <p class="card__code">Product code: 195434</p>
+      <div class="card__review">
+        <div class="card__stars card__stars--4">
+          <div class="card__star"></div>
+          <div class="card__star"></div>
+          <div class="card__star"></div>
+          <div class="card__star"></div>
+          <div class="card__star"></div>
+        </div>
+        <p class="card__review-text">Reviews: 5</p>
+      </div>
+
+      <div class="card__price">
+        <p class="card__price_label">Price:</p>
+        <p class="card__price_amount">$2,199</p>
+      </div>
+      <button class="card__button">BUY</button>
+    </div>
+    <div class="card">
+      <img
+        src="./images/imac.jpeg"
+        alt="imac"
+        class="card__img"
+      />
+      <p class="card__title">
+        APPLE A1419 iMac 27" Retina 5K Monoblock (MNED2UA/A)
+      </p>
+      <p class="card__code">Product code: 195434</p>
+      <div class="card__review">
+        <div class="card__stars card__stars--4">
+          <div class="card__star"></div>
+          <div class="card__star"></div>
+          <div class="card__star"></div>
+          <div class="card__star"></div>
+          <div class="card__star"></div>
+        </div>
+        <p class="card__review-text">Reviews: 5</p>
+      </div>
+
+      <div class="card__price">
+        <p class="card__price_label">Price:</p>
+        <p class="card__price_amount">$2,199</p>
+      </div>
+      <button class="card__button">BUY</button>
+    </div>
+    <div class="card">
+      <img
+        src="./images/imac.jpeg"
+        alt="imac"
+        class="card__img"
+      />
+      <p class="card__title">
+        APPLE A1419 iMac 27" Retina 5K Monoblock (MNED2UA/A)
+      </p>
+      <p class="card__code">Product code: 195434</p>
+      <div class="card__review">
+        <div class="card__stars card__stars--4">
+          <div class="card__star"></div>
+          <div class="card__star"></div>
+          <div class="card__star"></div>
+          <div class="card__star"></div>
+          <div class="card__star"></div>
+        </div>
+        <p class="card__review-text">Reviews: 5</p>
+      </div>
+
+      <div class="card__price">
+        <p class="card__price_label">Price:</p>
+        <p class="card__price_amount">$2,199</p>
+      </div>
+      <button class="card__button">BUY</button>
+    </div>
+    <div class="card">
+      <img
+        src="./images/imac.jpeg"
+        alt="imac"
+        class="card__img"
+      />
+      <p class="card__title">
+        APPLE A1419 iMac 27" Retina 5K Monoblock (MNED2UA/A)
+      </p>
+      <p class="card__code">Product code: 195434</p>
+      <div class="card__review">
+        <div class="card__stars card__stars--4">
+          <div class="card__star"></div>
+          <div class="card__star"></div>
+          <div class="card__star"></div>
+          <div class="card__star"></div>
+          <div class="card__star"></div>
+        </div>
+        <p class="card__review-text">Reviews: 5</p>
+      </div>
+
+      <div class="card__price">
+        <p class="card__price_label">Price:</p>
+        <p class="card__price_amount">$2,199</p>
+      </div>
+      <button class="card__button">BUY</button>
+    </div>
+    <div class="card">
+      <img
+        src="./images/imac.jpeg"
+        alt="imac"
+        class="card__img"
+      />
+      <p class="card__title">
+        APPLE A1419 iMac 27" Retina 5K Monoblock (MNED2UA/A)
+      </p>
+      <p class="card__code">Product code: 195434</p>
+      <div class="card__review">
+        <div class="card__stars card__stars--4">
+          <div class="card__star"></div>
+          <div class="card__star"></div>
+          <div class="card__star"></div>
+          <div class="card__star"></div>
+          <div class="card__star"></div>
+        </div>
+        <p class="card__review-text">Reviews: 5</p>
+      </div>
+
+      <div class="card__price">
+        <p class="card__price_label">Price:</p>
+        <p class="card__price_amount">$2,199</p>
+      </div>
+      <button class="card__button">BUY</button>
+    </div>
+    <div class="card">
+      <img
+        src="./images/imac.jpeg"
+        alt="imac"
+        class="card__img"
+      />
+      <p class="card__title">
+        APPLE A1419 iMac 27" Retina 5K Monoblock (MNED2UA/A)
+      </p>
+      <p class="card__code">Product code: 195434</p>
+      <div class="card__review">
+        <div class="card__stars card__stars--4">
+          <div class="card__star"></div>
+          <div class="card__star"></div>
+          <div class="card__star"></div>
+          <div class="card__star"></div>
+          <div class="card__star"></div>
+        </div>
+        <p class="card__review-text">Reviews: 5</p>
+      </div>
+
+      <div class="card__price">
+        <p class="card__price_label">Price:</p>
+        <p class="card__price_amount">$2,199</p>
+      </div>
+      <button class="card__button">BUY</button>
+    </div>
+  </main>
+
+  <body></body>
 </html>
